Done with assignment

--- a/index.html
+++ b/index.html
@@ -8,5 +8,17 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img
+    src="https://cdn.pixabay.com/photo/2023/01/28/12/18/fog-7750811_960_720.jpg"
+    />
+    <img
+    src="https://cdn.pixabay.com/photo/2023/02/10/07/59/fox-7780326__340.jpg"
+    alt="company logo"
+    />
+    <img
+    src="https://cdn.pixabay.com/photo/2023/02/11/16/02/nature-7783238_640.jpg"
+    alt="World Tours"
+    title="Book Now"
+    />
   </body>
 </html>
